# tricolour

./: pyproject.toml
docker/: Makefile  python312.docker
test_data/: .gitignore  tart.ms.tar.xz
tricolour/: flagging.py  mask.py  packing.py
tricolour/apps/tricolour/: app.py
tricolour/tests/: test_flagging.py
