[tool.poetry]
name = "tricolour"
version = "0.1.8.1"
description = "Science Data Processing flagging code, wrapped in dask"
authors = ["Simon Perkins"]
license = "GPLv2"
readme = "README.rst"
packages = [{include = "tricolour"}]

[tool.poetry.scripts]
tricolour = "tricolour.apps.tricolour.app:main"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
dask-ms = "^0.2.23"
numba = "^0.60.0"
donfig = "^0.8.1.post1"
threadpoolctl = "^3.5.0"
zarr = "^2.18.3"
scipy = ">1.9.0"


[tool.poetry.extras]
testing = ["pytest"]

[tool.poetry.group.dev.dependencies]
tbump = "^6.11.0"
pytest = "^8.3.4"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
requests = "^2.32.3"
gdown = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.tbump.version]
current = "0.1.8.2"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

# For each file to patch, add a [[tool.tbump.file]] config
# section containing the path of the file, relative to the
# tbump.toml location.
[[tool.tbump.file]]
src = "pyproject.toml"
search = 'version = "{current_version}"'

[[tool.tbump.file]]
src = "tricolour/__init__.py"
search = '__version__ = "{current_version}"'
